argocd/utility/vault/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hashicorp-vault-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.homelab.bowmans.site`)
      kind: Rule
      services:
      - name: hashicorp-vault
        port: 8200
      middlewares:
      - name: private-ips-allow
        namespace: traefik
  tls:
    secretName: hashicorp-vault-certificate
